data/all_generated_tests/raw_wast_tests/br_table_TypeMismatchinControlFlowInstructions_2426.wast
;; 6. Test Description 6: Generate a test where the `br_table` instruction inside a block targets labels that expect varying operand types with lengths different from the operand stack configuration.

(assert_invalid
  (module
    (func
      (block
        (i32.const 0) (i64.const 1)
        (br_table 1 2 (i32.const 2))
      )
    )
  )
  "type mismatch"
)